--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "markdown-link-check": "^3.10.3",
     "postcss": "^8.3.7",
     "postcss-cli": "^8.3.1"
   }
