--- a/config.toml
+++ b/config.toml
@@ -94,7 +94,7 @@ weight = 1
 section = ["HTML", "print", "RSS"]
 
 [params]
-copyright = ""
+# copyright = ""
 # privacy_policy = "https://policies.google.com/privacy"
 
 # First one is picked as the Twitter card image if not set on page.
