--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "/"
-title = "Managed Tenants SRE Docs"
+title = "Layered Products SRE Docs"
 
 enableRobotsTXT = true
 
@@ -70,8 +70,8 @@ anchor = "smart"
 
 [languages]
 [languages.en]
-title = "Managed Tenants SRE"
-description = "Documentation for Managed Tenants SRE at Red Hat"
+title = "Layered Products SRE"
+description = "Documentation for Layered Products SRE at Red Hat"
 languageName ="English"
 # Weight used for sorting.
 weight = 1
@@ -94,7 +94,7 @@ weight = 1
 section = ["HTML", "print", "RSS"]
 
 [params]
-copyright = "Red Hat"
+# copyright = ""
 # privacy_policy = "https://policies.google.com/privacy"
 
 # First one is picked as the Twitter card image if not set on page.
@@ -149,7 +149,7 @@ breadcrumb_disable = false
 # Set to true to disable the About link in the site footer
 footer_about_disable = true
 # Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top navbar
-navbar_logo = true
+navbar_logo = false
 # Set to true if you don't want the top navbar to be translucent when over a `block/cover`, like on the homepage.
 navbar_translucent_over_cover_disable = false
 # Enable to show the side bar menu in its compact state.
