--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,4 +25,4 @@ repos:
     rev: v3.11.2
     hooks:
       - id: markdown-link-check
-        args: [ -q ]
+        args: [ '-c .link-check-config.json' ]
