--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,9 @@ repos:
       - id: markdownlint-fix
         types: [markdown]
         exclude: themes/
+  - repo: https://github.com/tcort/markdown-link-check
+    rev: v3.11.2
+    hooks:
+      - id: markdown-link-check
+        args: [ '-c .link-check-config.json' ]
+        exclude: ^themes/
