--- a/.link-check-config.json
+++ b/.link-check-config.json
@@ -11,6 +11,27 @@
     },
     {
       "pattern": "^https://rover.redhat.com"
+    },
+    {
+      "pattern": "^https://gitlab.cee.redhat.com"
+    },
+    {
+      "pattern": "^https://grafana.stage.devshift.net"
+    },
+    {
+      "pattern": "^https://service.pages.redhat.com"
+    },
+    {
+      "pattern": "^https://post-office.corp.redhat.com"
+    },
+    {
+      "pattern": "^https://promlens."
+    },
+    {
+      "pattern": "^https://infogw-proxy.api."
+    },
+    {
+      "pattern": "^https://cpaas."
     }
   ]
 }
